--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "rfs": "^9.0.0",
     "yelp-fusion": "^3.0.0"
   },
   "devDependencies": {}
