--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "brfs": "^2.0.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.4",
+    "cookie-session": "^1.3.3",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
